2013-05-31  James Hunt  <james.hunt@ubuntu.com>

	* init/job_class.c: job_class_environment_init(): Copy inits environment
	  to the default job class environment for user mode where appropriate.
	  (LP: #1159895).
	* init/job_process.c: job_process_run(): Don't copy inits environment
	  into the job instances environment table as those values are now
	  already in the table.
	* util/tests/test_initctl.c: Updates for new behaviour (where
	  'list-env' will now contain the entire environment of the init
	  process, not just those variables explicitly set via set-env).
	* util/man/initctl.8: Update on behaviour.

2013-05-27  Marc Deslauriers  <marc.deslauriers@ubuntu.com>

	* init/job.c: Don't check for user mode when trying to load an
	  AppArmor profile. User mode is supported as root, and upstart
	  can be run as a user without being in user mode.
	* init/man/init.5: Adjust man page.

2013-05-24  James Hunt  <james.hunt@ubuntu.com>

	* init/log.c:
	  - log_clear_unflushed(): Expand assertion to handle scenario
	    where the NihIo is still valid but empty (since the data now
	    exists on the unflushed list).
	  - log_read_watch(): Handle EINTR.

2013-05-24  Marc Deslauriers  <marc.deslauriers@ubuntu.com>

	* init/job_process.c: Allow environment variables in apparmor
	  switch stanzas.
	* init/apparmor.[ch]: Use a profile name instead of a Job so we
	  can use environment variables.

2013-05-23  Marc Deslauriers  <marc.deslauriers@ubuntu.com>

	* init/tests/test_state.c: An unused process is actually supposed
          to be NULL. Fix test.
	* init/process.c: Adjust to leave unused process as NULL.

2013-05-17  Marc Deslauriers  <marc.deslauriers@ubuntu.com>

	* init/process.c: Fix deserialising with PROCESS_SECURITY.
	* init/tests/data/upstart-pre-security.json: Added new file to
	  test importing serialisation data without security elements.
	* init/tests/test_state.c: Added new data format test.

2013-05-15  Marc Deslauriers  <marc.deslauriers@ubuntu.com>
