@@ -16436,21 +16436,6 @@ test_default_job_env (const char *confdir, const char *logdir,
 	assert (upstart_pid);
 	assert (dbus_pid);
 
-	/*******************************************************************/
-	/* Ensure basic variables are set in the current environment */
-
-	if (! getenv ("TERM")) {
-		fprintf (stderr, "WARNING: setting TERM to '%s' as not set\n",
-				TEST_INITCTL_DEFAULT_TERM);
-		assert0 (setenv ("TERM", TEST_INITCTL_DEFAULT_TERM, 1));
-	}
-
-	if (! getenv ("PATH")) {
-		fprintf (stderr, "WARNING: setting PATH to '%s' as not set\n",
-				TEST_INITCTL_DEFAULT_PATH);
-		assert0 (setenv ("PATH", TEST_INITCTL_DEFAULT_PATH, 1));
-	}
-
 	cmd = nih_sprintf (NULL, "%s reset-env 2>&1", get_initctl ());
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
@@ -17342,6 +17327,73 @@ test_global_and_local_job_env (const char *confdir, const char *logdir,
 	/*******************************************************************/
 }
 
+void
+test_no_inherit_job_env (const char *runtimedir, const char *confdir, const char *logdir)
+{
+	nih_local char  *cmd = NULL;
+	char           **output;
+	size_t           lines;
+	pid_t            upstart_pid = 0;
+	char            *extra[] = { "--no-inherit-env", NULL };
+	nih_local char  *logfile = NULL;
+	nih_local char  *session_file = NULL;
+	FILE            *fi;
+
+	start_upstart_common (&upstart_pid, TRUE, confdir, logdir, extra);
+
+	/*******************************************************************/
+	TEST_FEATURE ("ensure list-env in '--user --no-inherit-env' environment gives expected output");
+
+	cmd = nih_sprintf (NULL, "%s list-env 2>&1", get_initctl ());
+	TEST_NE_P (cmd, NULL);
+	RUN_COMMAND (NULL, cmd, &output, &lines);
+
+	/* environment should comprise the default environment only */
+	TEST_EQ (lines, 2);
+	TEST_STR_MATCH (output[0], "PATH=*");
+	TEST_STR_MATCH (output[1], "TERM=*");
+	nih_free (output);
+
+	/*******************************************************************/
+	TEST_FEATURE ("ensure '--user --no-inherit-env' provides expected job environment");
+
+	CREATE_FILE (confdir, "foo.conf", "exec env");
+
+	cmd = nih_sprintf (NULL, "%s start foo 2>&1", get_initctl ());
+	TEST_NE_P (cmd, NULL);
+	RUN_COMMAND (NULL, cmd, &output, &lines);
+	nih_free (output);
+
+	logfile = NIH_MUST (nih_sprintf (NULL, "%s/%s",
+				logdir,
+				"foo.log"));
+
+	WAIT_FOR_FILE (logfile);
+
+	fi = fopen (logfile, "r");
+	TEST_NE_P (fi, NULL);
+	TEST_FILE_CONTAINS (fi, "PATH=*");
+	TEST_FILE_CONTAINS (fi, "TERM=*");
+
+	/* asterisk required to match '\r\n' */
+	TEST_FILE_CONTAINS (fi, "UPSTART_JOB=foo*");
+	TEST_FILE_CONTAINS (fi, "UPSTART_INSTANCE=*");
+	TEST_FILE_CONTAINS (fi, "UPSTART_SESSION=*");
+	fclose (fi);
+
+	DELETE_FILE (confdir, "foo.conf");
+	TEST_EQ (unlink (logfile), 0);
+
+	/*******************************************************************/
+
+	session_file = NIH_MUST (nih_sprintf (NULL, "%s/upstart/sessions/%d.session",
+				runtimedir, (int)upstart_pid));
+
+	STOP_UPSTART (upstart_pid);
+
+	unlink (session_file);
+}
+
 /*
  * Test all the commands which affect the job environment table together
  * as they are so closely related.
@@ -17385,6 +17437,21 @@ test_job_env (void)
 
 	TEST_EQ (setenv ("XDG_RUNTIME_DIR", runtimedir, 1), 0);
 
+	/*******************************************************************/
+	/* Ensure basic variables are set in the current environment */
+
+	if (! getenv ("TERM")) {
+		fprintf (stderr, "WARNING: setting TERM to '%s' as not set\n",
+				TEST_INITCTL_DEFAULT_TERM);
+		assert0 (setenv ("TERM", TEST_INITCTL_DEFAULT_TERM, 1));
+	}
+
+	if (! getenv ("PATH")) {
+		fprintf (stderr, "WARNING: setting PATH to '%s' as not set\n",
+				TEST_INITCTL_DEFAULT_PATH);
+		assert0 (setenv ("PATH", TEST_INITCTL_DEFAULT_PATH, 1));
+	}
+
 	TEST_DBUS (dbus_pid);
 	start_upstart_common (&upstart_pid, TRUE, confdir, logdir, NULL);
 
@@ -17419,14 +17486,21 @@ test_job_env (void)
 	/*******************************************************************/
 
 	STOP_UPSTART (upstart_pid);
+	session_file = NIH_MUST (nih_sprintf (NULL, "%s/upstart/sessions/%d.session",
+				runtimedir, (int)upstart_pid));
+	unlink (session_file);
+
+	/*******************************************************************/
+
+	test_no_inherit_job_env (runtimedir, confdir, logdir);
+
+	/*******************************************************************/
+
 	TEST_DBUS_END (dbus_pid);
 	assert0 (unsetenv ("UPSTART_CONFDIR"));
 	assert0 (unsetenv ("UPSTART_LOGDIR"));
 	assert0 (unsetenv ("UPSTART_SESSION"));
 
-	session_file = NIH_MUST (nih_sprintf (NULL, "%s/upstart/sessions/%d.session",
-				runtimedir, (int)upstart_pid));
-	unlink (session_file);
 	session_file = NIH_MUST (nih_sprintf (NULL, "%s/upstart/sessions", runtimedir));
         TEST_EQ (rmdir (session_file), 0);
 	session_file = NIH_MUST (nih_sprintf (NULL, "%s/upstart", runtimedir));
