@@ -1,3 +1,13 @@
+2013-06-03  James Hunt  <james.hunt@ubuntu.com>
+
+	* util/tests/test_initctl.c:
+	  - test_no_inherit_job_env(): New function to test --no-inherit-env.
+	  - test_job_env():
+	    - Move code that sets HOME+PATH if not set from
+	      test_default_job_env() so that test_no_inherit_job_env() can make
+	      use of it.
+	    - Session file cleanup tweaks to work with test_no_inherit_job_env().
+
 2013-05-31  James Hunt  <james.hunt@ubuntu.com>
 
 	* init/job_class.c: job_class_environment_init(): Copy inits environment
